tests/NormalTests/paczka1/fuzzy1/71465334.err
Error in line 1: N0OO A21 33,3
Error in line 6: rMwh,WxcyAL A777 15,4
Error in line 17: A999 A21 62,9
Error in line 22: A999 A999 48,4
Error in line 7: rMwhuWxcyAL A777 68,8
Error in line 21: km2m A21 23,3
Error in line 31: rMwhuWxcyAL A999 27,7
